# libSplash

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  PostInstall.cmake.in  README.md  SplashConfig.cmake.in  _attribute_info_8cpp_source.html  _attribute_info_8hpp_source.html  _col_type_bool_8hpp_source.html  _col_type_dim_8hpp_source.html  _col_type_dim_array_8hpp_source.html  _col_type_double_8hpp_source.html  _col_type_float2_8hpp_source.html  _col_type_float2_array_8hpp_source.html  _col_type_float3_8hpp_source.html  _col_type_float3_array_8hpp_source.html  _col_type_float4_8hpp_source.html  _col_type_float_8hpp_source.html  _col_type_int2_8hpp_source.html  _col_type_int2_array_8hpp_source.html  _col_type_int3_8hpp_source.html  _col_type_int3_array_8hpp_source.html  _col_type_int_8hpp_source.html  _col_type_string_8hpp_source.html  _col_type_unknown_8hpp_source.html  _collection_type_8hpp_source.html  _d_c_attribute_8cpp_source.html  _d_c_attribute_8hpp_source.html  _d_c_data_set_8cpp_source.html  _d_c_data_set_8hpp_source.html  _d_c_exception_8hpp_source.html  _d_c_group_8cpp_source.html  _d_c_group_8hpp_source.html  _d_c_helper_8hpp_source.html  _d_c_parallel_data_set_8hpp_source.html  _d_c_parallel_group_8hpp_source.html  _data_collector_8hpp_source.html  _data_container_8hpp_source.html  (+1330 more)
.travis/spack/: packages.yaml
cmake/: FindHDF5.cmake
doc/: Doxyfile  INSTALL.md
doc/img/src/: domains_parallel.odg  domains_serial.odg
doc/manual/: UserManual.tex  zih_logo.eps
examples/: CMakeLists.txt
examples/domain_read/: CMakeLists.txt  domain_read.cpp  domain_read_mpi.cpp
examples/domain_write/: domain_write_mpi.cpp
examples/parallel_domain_write/: parallel_domain_write.cpp
src/: AttributeInfo.cpp  DCAttribute.cpp  DCAttributeInfo.cpp  DCDataSet.cpp  DCGroup.cpp  DomainCollector.cpp  HandleMgr.cpp  ParallelDataCollector.cpp  ParallelDomainCollector.cpp  SDCHelper.cpp  SerialDataCollector.cpp  generateCollectionType.cpp  logging.cpp
src/include/: CollectionType.hpp  DCAttribute.hpp  DCDataSet.hpp  DCException.hpp  DCGroup.hpp  DCHelper.hpp  DCParallelDataSet.hpp  DCParallelGroup.hpp  DataCollector.hpp  DataContainer.hpp  DataMerger.h  Dimensions.hpp  Domain.hpp  DomainCollector.hpp  DomainData.hpp  HandleMgr.hpp  IDomainCollector.hpp  IParallelDataCollector.hpp  IParallelDomainCollector.hpp  ParallelDataCollector.hpp  ParallelDomainCollector.hpp  SDCHelper.hpp  SerialDataCollector.hpp  pdc_defines.hpp  sdc_defines.hpp  splash_parallel.h  splash_serial.h  version.hpp
src/include/basetypes/: ColTypeBool.hpp  ColTypeDim.hpp  ColTypeDimArray.hpp  ColTypeDouble.hpp  ColTypeFloat.hpp  ColTypeFloat2.hpp  ColTypeFloat2Array.hpp  ColTypeFloat3.hpp  ColTypeFloat3Array.hpp  ColTypeFloat4.hpp  ColTypeInt.hpp  ColTypeInt2.hpp  ColTypeInt2Array.hpp  ColTypeInt3.hpp  ColTypeInt3Array.hpp  ColTypeUInt32.hpp  ColTypeUInt64.hpp  basetypes.hpp  basetypes_array.hpp  basetypes_atomic.hpp  basetypes_compound.hpp
src/include/core/: DCAttribute.hpp  DCDataSet.hpp  DCGroup.hpp  DCHelper.hpp  DCParallelDataSet.hpp  DCParallelGroup.hpp  HandleMgr.hpp  SDCHelper.hpp  logging.hpp
src/include/domains/: DataContainer.hpp  Domain.hpp  DomainData.hpp  IDomainCollector.hpp  IParallelDomainCollector.hpp
src/include/splash/: AttributeInfo.hpp  CollectionType.hpp  DCAttributeInfo.hpp  DCException.hpp  DataCollector.hpp  Dimensions.hpp  DomainCollector.hpp  IParallelDataCollector.hpp  ParallelDataCollector.hpp  ParallelDomainCollector.hpp  Selection.hpp  SerialDataCollector.hpp  pdc_defines.hpp  sdc_defines.hpp  splash_parallel.h  splash_serial.h  version.hpp
src/include/splash/basetypes/: ColTypeBool.hpp  ColTypeDim.hpp  ColTypeDimArray.hpp  ColTypeString.hpp  ColTypeUnknown.hpp  CollectionTypeGenerator.hpp  basetypes.hpp  basetypes_array.hpp  basetypes_atomic.hpp  basetypes_compound.hpp  generateCollectionType.hpp
src/include/splash/core/: DCAttribute.hpp  DCDataSet.hpp  DCGroup.hpp  DCHelper.hpp  DCParallelDataSet.hpp  DCParallelGroup.hpp  H5IdWrapper.hpp  HandleMgr.hpp  SDCHelper.hpp  logging.hpp  splashMacros.hpp
src/include/splash/domains/: DataContainer.hpp  Domain.hpp  DomainData.hpp  IDomainCollector.hpp  IParallelDomainCollector.hpp
tests/: AppendTest.cpp  AttributesTest.cpp  BenchmarkTest.cpp  CMakeLists.txt  DomainsTest.cpp  FileAccessTest.cpp  FilenameTest.cpp  MergedReadTest.cpp  Parallel_AttributesTest.cpp  Parallel_DomainsTest.cpp  Parallel_FilenameTest.cpp  Parallel_ListFilesTest.cpp  Parallel_ReferencesTest.cpp  Parallel_RemoveTest.cpp  Parallel_SerialDCTest.cpp  Parallel_SimpleDataTest.cpp  Parallel_ZeroAccessTest.cpp  ReferencesTest.cpp  RemoveTest.cpp  SimpleDataTest.cpp  StridingTest.cpp  readBool.py  readBoolChar.py  run_parallel_tests  run_tests
tests/dependencies/: runner.cpp
tests/include/: AppendTest.h  AttributesTest.h  BenchmarkTest.h  DomainsTest.h  FileAccessTest.h  MergedReadTest.h  Parallel_AttributesTest.h  Parallel_DomainsTest.h  Parallel_ListFilesTest.h  Parallel_ReferencesTest.h  Parallel_RemoveTest.h  Parallel_SimpleDataTest.h  Parallel_ZeroAccessTest.h  ReferencesTest.h  RemoveTest.h  SimpleDataTest.h  StridingTest.h
tools/: splash2xdmf.py  splashtools.cpp
